# QtWithCMake

Chapter1_Building_a_C++_console_application/: CMakeLists.txt  main.cpp
Chapter2_Building_a_C++_GUI_application/: CMakeLists.txt
Chapter3_Structuring_projects/: CMakeLists.txt
Chapter3_Structuring_projects/src/app/: CMakeLists.txt
Chapter4_Building libraries/: CMakeLists.txt
Chapter4_Building libraries/src/app/: CMakeLists.txt  main.cpp
Chapter4_Building libraries/src/businesslogic/: CMakeLists.txt
